# versatus

quorum/: Cargo.toml
quorum/src/: dkg.rs
